src/objects/IPM_CoreParameter_Configration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>IPM_Additional_Parameters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Parameters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_BET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_CPV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer place values</description>
        <label>CPV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_CVP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_ET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_FastTrack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FastTrack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Help_Text_Two__c</fullName>
        <description>store help text</description>
        <label>Help Text Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Help_Text__c</fullName>
        <description>store help text</description>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_MPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Strategic_Intent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Intent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_WhiteSpace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WhiteSpace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>IPM CoreParameter Configration</label>
</CustomObject>